src/test/run-pass/macros/auxiliary/macro_crate_def_only.rs
#[macro_export]
macro_rules! make_a_5 {
    () => (5)
}
