src/test/compile-fail-fulldeps/auxiliary/macro_reexport_1.rs
#![crate_type = "dylib"]
#[macro_export]
macro_rules! reexported {
    () => ( 3 )
}
